(example-jdk-jsonb) - Support Graalvm 22.2.0 with reflection.json
- graalvm 22.2.0 now requires the service loading to be in reflection.json
- also needs -J--add-modules -JALL-SYSTEM
- also add README